demo/6-lock-down-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: lock-down-namespace
  namespace: football-bets
spec:
  mtls:
    mode: STRICT
