demo/require-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: football-bets
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals:
              - '*'
  selector:
    matchLabels:
      app: bets
