demo/require-scope.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: football-bets
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals:
              - '*'
      when:
        - key: request.auth.claims[scope]
          values:
            - bets:write
  selector:
    matchLabels:
      app: bets
